--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,11 +9,8 @@
     {{ end }}
   {{ end }}
 
-	<div class="extra-pagination">
-	    {{ partial "pagination.html" .}}
-	</div>
   {{ range $paginator.Pages  }}
-  {{ .Render "summary"  }}
+  {{ partial "summary.html" . }}
   {{ end  }}
   {{ partial "pagination.html" .  }}
 </main>
