--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,11 +1,8 @@
 {{ define "main" }}
 	<main class="content" role="main">
-    {{ $paginator := .Paginate (where .Pages "Type" "post") }}
-    <div class="extra-pagination">
-      {{ partial "pagination.html" . }}
-    </div>
+    {{ $paginator := .Paginate (.Site.Taxonomies.categories.main) 12 }}
 		{{ range $paginator.Pages }}
-      {{ .Render "summary" }}
+      {{ partial "summary.html" . }}
 		{{ end }}
     {{ partial "pagination.html" . }}
 	</main>
